# aws-rotate-iam-keys-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  NOTICE.md  README.md  about.hbs  about.toml  build.rs  deny.toml
.github/: .dependabot.yml  FUNDING.yml
.github/workflows/: ci.yaml  publish.yaml
docs/api/: search-index.js  settings.html  source-files.js
docs/api/implementors/core/clone/: trait.Clone.js
docs/api/implementors/core/convert/: trait.From.js
docs/api/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/api/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/api/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/api/rotate_iam_keys/: all.html  fn.main.html  fn.rotate.html  index.html  sidebar-items.js
docs/api/rotate_iam_keys/app/: fn.app.html  index.html
docs/api/rotate_iam_keys/aws_config/: enum.ConfigType.html  fn.get_config_path.html  fn.parse_config_files.html  fn.write_credentials.html  index.html  sidebar-items.js  struct.AWSConfig.html
docs/api/rotate_iam_keys/rotate_error/: index.html  sidebar-items.js  struct.RotateError.html
docs/api/src/rotate_iam_keys/: app.rs.html  aws_config.rs.html  main.rs.html  rotate_error.rs.html
src/: app.rs  aws_config.rs  aws_config_test.rs  main.rs  rotate_error.rs  rotate_error_test.rs
