[package]
name = "aws-rotate-iam-keys-rs"
version = "0.1.0"
authors = ["Martin Kemp <martinkemp@deloitte.co.uk>"]
license = "MIT / Apache-2.0"
readme = "README.md"
repository = "https://github.com/FoxAndDuckSoftware/aws-rotate-iam-keys-rs"
description = "A tool to rotate your AWS IAM access keys"
keywords = ["cli", "aws", "security"]
categories = ["command-line-utilities"]
exclude = [".github/", ".gitignore", "deny.toml", "Makefile.toml"]
edition = "2018"

[[bin]]
name = "rotate-iam-keys"
path = "src/main.rs"

[dependencies]
clap = "2.33.1"
dirs = "2.0.2"
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4.8"
rust-ini = "0.15.2"
rusoto_core = "0.43.0"
rusoto_credential = "0.43.0"
rusoto_iam = "0.43.0"
tokio = { version = "0.2.21", features = ["full"] }
