[package]
name = "aws-rotate-iam-keys-rs"
version = "1.0.1"
authors = ["Martin Kemp <martinkemp@deloitte.co.uk>"]
license = "MIT / Apache-2.0"
readme = "README.md"
repository = "https://github.com/FoxAndDuckSoftware/aws-rotate-iam-keys-rs"
description = "A tool to rotate your AWS IAM access keys"
keywords = ["cli", "aws", "security"]
categories = ["command-line-utilities"]
exclude = [".github/", ".gitignore", "deny.toml", "Makefile.toml", "about.hbs", "about.toml"]
edition = "2018"

[[bin]]
name = "rotate-iam-keys"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
dirs-next = "2.0.0"
env_logger = "0.8.2"
futures = "0.3.8"
log = "0.4.11"
rust-ini = "0.16.0"
rusoto_core = "0.46.0"
rusoto_credential = "0.46.0"
rusoto_iam = "0.46.0"

[dependencies.tokio]
version = "1.0.1"
features = ["rt", "rt-multi-thread", "macros"]

[build-dependencies]
clap = "2.33.3"

[profile.release]
lto = true
